[package]
name = "telescope"
version = "0.1.0"
authors = ["Kirill Fomichev <fanatid@ya.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
clap = "2.33"
env_logger = "0.7.1"
futures = "0.3"
hyper = "0.13.2"
log = "0.4"
num_cpus = "1.12"
quick-error = "1.2.3"
reqwest = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2.13", features = ["rt-core", "rt-threaded", "io-driver", "time", "macros", "sync", "signal"] }
url = "2.1.1"

[build-dependencies]
git2 = "0.12"
toml = "0.5"
