[package]
name = "telescope"
version = "0.1.0"
authors = ["Kirill Fomichev <fanatid@ya.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.0"
bb8 = "0.4.0"
bb8-postgres = "0.4.0"
clap = "2.33"
env_logger = "0.7.1"
futures = "0.3"
humantime = "2.0.0"
hyper = "0.13.3"
log = "0.4"
num_cpus = "1.12"
quick-error = "1.2.3"
regex = "1"
reqwest = "0.10"
rsyesql = { git = "https://github.com/fanatid/rsyesql#v0.1.0" }
semver = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2.13", features = ["rt-core", "rt-threaded", "io-driver", "time", "macros", "sync", "signal"] }
tokio-postgres = { version = "0.5.3", features = ["default", "with-serde_json-1"] }
url = "2.1.1"

[build-dependencies]
git2 = "0.12"
toml = "0.5"
